2005-11-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh: Add TestRunner.sh to classes/files.
	
	* Makefile.rules (javadir, java_DATA): Define.
	* Makefile.gen.sh: Add ${dir}.jar to java_DATA, delete
	${_dir}_jar_SOURCES.

	* Makefile.rules (LIBJUNIT): Delete.
	(GEN_CLASSPATH): Do not add junit.jar.

	* Makefile.gen.sh: Add frysk- prefix to any .a or .so libraries.
	* Makefile.rules (GEN_CLASSPATH, LIBJUNIT): Update.

	* Makefile.rules (.java.h): Change $ to $$ in shell command.

	* Makefile.gen.sh: Append -Djava.library.path=..., and
	-Wl,-rpath,... to each program's LDFLAGS.  Add all .so's to
	solib_DATA so that they are installed.
	* Makefile.rules (GEN_GCJ_RPATH, GEN_GCJ_RPATH_FLAGS): Define.
	(BUILD_GCJ_RPATH): Define.
	(TestRunner_LDFLAGS): Add $(GEN_GCJ_RPATH_FLAGS).

2005-11-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (GEN_BUILT_CLASSES): Delete.
	* Makefile.gen.sh: Rewrite .java -> .class .jar rule to comile
	everything at once.

2005-11-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.java.h): Replace .classes.h rule.

2005-11-07  Andrew Cagney  <cagney@redhat.com>

	* TestRunner.sh: Add a -<repeat> option.

2005-11-02  Adam Jocksch  <ajocksch@redhat.com>

	* Makefile.gen.sh: Added rule to copy over test .cpp files after a 
	make install.

2005-11-02  Igor Foox  <ifoox@redhat.com>

	 * m4/ac_get_lib_line.m4, m4/ac_find_file.m4: Add copyright statement.

2005-11-01  Igor Foox  <ifoox@redhat.com>

	* acinclude.m4: Fixed ordering of macro calls.

	* Makefile.rules: Added ACLOCAL_AMFLAGS = -I common/m4 to include local
	macros. 
	* m4: New directory.
	* m4/ac_get_lib_line.m4: New file.
	* m4/ac_find_file.m4: New file.

2005-10-31  Andrew Cagney  <cagney@redhat.com>

	* TestRunner.sh: Print PASS when a test does not FAIL or ERROR.

	* Makefile.rules: Fix typo, $(FIG2DEV) not $FIG2DEV.

2005-10-31  Igor Foox  <ifoox@redhat.com>

	* acinclude.m4: Added a check for fig2dev.